refactor: Replace diagnosis status emojis with 'Good' and 'Bad' text labels.

--- a/index.html
+++ b/index.html
@@ -771,8 +771,8 @@
             <div class="flex items-center">
                 <div class="mr-3 flex-shrink-0">
                     ${diagnosis.toLowerCase().includes("healthy") ?
-                    '<span class="text-emerald-500 text-xl">✅</span>' :
-                    '<span class="text-amber-500 text-xl">⚠️</span>'}
+                    '<span class="text-emerald-500 text-xl">Good</span>' :
+                    '<span class="text-amber-500 text-xl">Bad</span>'}
                 </div>
                 <div>
                     <p class="font-bold text-slate-800 text-sm">${diagnosis}</p>
