--- a/index.html
+++ b/index.html
@@ -80,6 +80,8 @@
 
     <header class="bg-gradient-to-r from-emerald-700 to-teal-600 text-white py-6 shadow-lg mb-8">
         <div class="container mx-auto px-4 text-center">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/49/Flag_of_Kenya.svg/250px-Flag_of_Kenya.svg.png"
+                alt="AI Crop Doctor" class="w-20 h-20 mx-auto mb-4 rounded-full">
             <h1 class="text-3xl font-bold italic">AI Crop Doctor</h1>
             <p class="text-emerald-100 text-sm">Smart AI Crop Disease Detector with Analytics</p>
         </div>
@@ -684,7 +686,7 @@
         function updateAnalytics(prediction) {
             if (!prediction || prediction.length === 0) return;
 
-            // Sort predictions
+
             const sorted = [...prediction].sort((a, b) => b.probability - a.probability);
             const topResult = sorted[0];
             const confidencePercent = topResult ? Math.round(topResult.probability * 100) : 0;
